--- a/final_simulation/model_evaluation.ipynb
+++ b/final_simulation/model_evaluation.ipynb
@@ -30,6 +30,8 @@
    "source": [
     "from final_simulation._env.real_intersection import RealIntersectionSimpleObs13, RealIntersectionSimpleObs13_Static\n",
     "from final_simulation._sumo.simplest_intersection_simulation import SignalStates, SumoSimulationSimpleObs\n",
+    "from final_simulation._env.qlearn_intersection import SimplestIntersection\n",
+    "from final_simulation._sumo.qlearn_simulation import SumoSimulation\n",
     "from final_simulation.sarsa import SARSA_Eval\n",
     "from stable_baselines3 import DQN, PPO, A2C\n",
     "import os\n",
@@ -53,7 +55,9 @@
     "# Sim time 1 minute\n",
     "n_episodes = 3\n",
     "max_simulation_seconds = 300\n",
+    "log_dir = \"final_simulation\\\\_models\\\\eval\"\n",
     "\n",
+    "# Simulation\n",
     "simulation = SumoSimulationSimpleObs(\n",
     "    sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo\",\n",
     "    #sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo-gui\",\n",
@@ -61,11 +65,27 @@
     "    signal_states=SignalStates\n",
     ")\n",
     "\n",
+    "# Environment\n",
     "env = RealIntersectionSimpleObs13(\n",
     "    simulation=simulation,\n",
     "    max_simulation_seconds=max_simulation_seconds\n",
     ")\n",
     "\n",
+    "# Q simulation\n",
+    "simulation_q = SumoSimulation(\n",
+    "    sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo\",\n",
+    "    #sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo-gui\",\n",
+    "    sumo_config_path=\"C:\\\\sumoconfig\\\\real_intersection.sumocfg\",\n",
+    "    signal_states=SignalStates\n",
+    ")\n",
+    "\n",
+    "# Q Environment\n",
+    "env_q = SimplestIntersection(\n",
+    "    simulation=simulation_q,\n",
+    "    max_simulation_seconds=max_simulation_seconds\n",
+    ")\n",
+    "\n",
+    "# Static Environment\n",
     "env_static = RealIntersectionSimpleObs13_Static(\n",
     "    simulation=simulation,\n",
     "    max_simulation_seconds=max_simulation_seconds\n",
@@ -110,7 +130,7 @@
     "            env.save_metrics(\n",
     "                episode=episode,\n",
     "                model_name=\"PPO\",\n",
-    "                log_dir=\"final_simulation\\\\_models\\\\eval\"\n",
+    "                log_dir=log_dir\n",
     "            )"
    ]
   },
@@ -152,7 +172,7 @@
     "            env.save_metrics(\n",
     "                episode=episode,\n",
     "                model_name=\"DQN\",\n",
-    "                log_dir=\"final_simulation\\\\_models\\\\eval\"\n",
+    "                log_dir=log_dir\n",
     "            )"
    ]
   },
@@ -194,7 +214,7 @@
     "            env.save_metrics(\n",
     "                episode=episode,\n",
     "                model_name=\"A2C\",\n",
-    "                log_dir=\"final_simulation\\\\_models\\\\eval\"\n",
+    "                log_dir=log_dir\n",
     "            )"
    ]
   },
@@ -229,7 +249,11 @@
       "No simulation running.\n",
       "saving observation file..\n",
       "Episode:  2\n",
-      "No simulation running.\n"
+      "No simulation running.\n",
+      "saving observation file..\n",
+      "Episode:  3\n",
+      "No simulation running.\n",
+      "saving observation file..\n"
      ]
     }
    ],
@@ -250,7 +274,50 @@
     "            env.save_metrics(\n",
     "                episode=episode,\n",
     "                model_name=\"SARSA\",\n",
-    "                log_dir=\"final_simulation\\\\_models\\\\eval\"\n",
+    "                log_dir=log_dir\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q Learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q_table = \"Load q table\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for episode in range(1,n_episodes + 1):\n",
+    "\n",
+    "    print(\"Episode: \", episode)\n",
+    "\n",
+    "    observation = env_q.reset()\n",
+    "    done = False\n",
+    "\n",
+    "    while done != True:\n",
+    "        \n",
+    "        #action = model.predict(observation)\n",
+    "        action = np.argmax(q_table[observation])\n",
+    "        observation, reward, done, info = env_q.step(float(action))\n",
+    "\n",
+    "        if done:\n",
+    "            env.save_metrics(\n",
+    "                episode=episode,\n",
+    "                model_name=\"QLearn\",\n",
+    "                log_dir=log_dir\n",
     "            )"
    ]
   },
@@ -282,364 +349,8 @@
     "            env_static.save_metrics(\n",
     "                episode=episode,\n",
     "                model_name=\"STATIC\",\n",
-    "                log_dir=\"final_simulation\\\\_models\\\\eval\"\n",
+    "                log_dir=log_dir\n",
     "            )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Old\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Reward 08"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sim time 1 minute\n",
-    "max_simulation_seconds = 180\n",
-    "\n",
-    "simulation = SumoSimulation(\n",
-    "    #sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo\",\n",
-    "    sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo-gui\",\n",
-    "    sumo_config_path=\"C:\\\\sumoconfig\\\\real_intersection.sumocfg\",\n",
-    "    signal_states=SignalStates\n",
-    ")\n",
-    "\n",
-    "env = SimplestIntersection(\n",
-    "    simulation=simulation,\n",
-    "    max_simulation_seconds=max_simulation_seconds\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = PPO.load(\"final_simulation\\\\_models\\\\reward_08\\\\ppo\\\\trained_model.zip\")\n",
-    "#model = A2C.load(\"final_simulation\\\\_models\\\\reward_07\\\\a2c\\\\trained_model.zip\")\n",
-    "#model = DQN.load(\"final_simulation\\\\_models\\\\reward_07\\\\dqn\\\\trained_model.zip\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "observation = env.reset()\n",
-    "\n",
-    "while True:\n",
-    "    #observation = observation[np.newaxis, ...]\n",
-    "\n",
-    "    # action = env.action_space.sample()\n",
-    "    action, _states = model.predict(observation)\n",
-    "    observation, reward, done, info = env.step(float(action))\n",
-    "\n",
-    "    # env.render()\n",
-    "    if done:\n",
-    "        print(\"info:\", info)\n",
-    "        env.render()\n",
-    "        break\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Reward 09"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from final_simulation._env.real_intersection import RealIntersection9"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sim time 1 minute\n",
-    "max_simulation_seconds = 180\n",
-    "\n",
-    "simulation = SumoSimulation(\n",
-    "    #sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo\",\n",
-    "    sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo-gui\",\n",
-    "    sumo_config_path=\"C:\\\\sumoconfig\\\\real_intersection.sumocfg\",\n",
-    "    signal_states=SignalStates\n",
-    ")\n",
-    "\n",
-    "env = RealIntersection9(\n",
-    "    simulation=simulation,\n",
-    "    max_simulation_seconds=max_simulation_seconds\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = PPO.load(\"final_simulation\\\\_models\\\\reward_10\\\\ppo\\\\best_model.zip\")\n",
-    "#model = A2C.load(\"final_simulation\\\\_models\\\\reward_10\\\\a2c\\\\best_model.zip\")\n",
-    "#model = DQN.load(\"final_simulation\\\\_models\\\\reward_07\\\\dqn\\\\trained_model.zip\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "observation = env.reset()\n",
-    "\n",
-    "while True:\n",
-    "    #observation = observation[np.newaxis, ...]\n",
-    "\n",
-    "    # action = env.action_space.sample()\n",
-    "    action, _states = model.predict(observation)\n",
-    "    observation, reward, done, info = env.step(float(action))\n",
-    "\n",
-    "    # env.render()\n",
-    "    if done:\n",
-    "        print(\"info:\", info)\n",
-    "        env.render()\n",
-    "        break\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Reward 11"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from final_simulation._env.real_intersection import RealIntersection11"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sim time 1 minute\n",
-    "max_simulation_seconds = 180\n",
-    "\n",
-    "simulation = SumoSimulation(\n",
-    "    #sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo\",\n",
-    "    sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo-gui\",\n",
-    "    sumo_config_path=\"C:\\\\sumoconfig\\\\real_intersection.sumocfg\",\n",
-    "    signal_states=SignalStates\n",
-    ")\n",
-    "\n",
-    "env = RealIntersection11(\n",
-    "    simulation=simulation,\n",
-    "    max_simulation_seconds=max_simulation_seconds\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = PPO.load(\"final_simulation\\\\_models\\\\reward_11\\\\ppo\\\\best_model.zip\")\n",
-    "#model = A2C.load(\"final_simulation\\\\_models\\\\reward_10\\\\a2c\\\\best_model.zip\")\n",
-    "#model = DQN.load(\"final_simulation\\\\_models\\\\reward_07\\\\dqn\\\\trained_model.zip\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "observation = env.reset()\n",
-    "\n",
-    "while True:\n",
-    "    #observation = observation[np.newaxis, ...]\n",
-    "\n",
-    "    # action = env.action_space.sample()\n",
-    "    action, _states = model.predict(observation)\n",
-    "    observation, reward, done, info = env.step(float(action))\n",
-    "\n",
-    "    # env.render()\n",
-    "    if done:\n",
-    "        print(\"info:\", info)\n",
-    "        env.render()\n",
-    "        break\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Reward 12 (Simple)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from final_simulation._env.real_intersection import RealIntersectionSimpleObs12\n",
-    "from final_simulation._sumo.simplest_intersection_simulation import SumoSimulationSimpleObs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sim time 1 minute\n",
-    "max_simulation_seconds = 180\n",
-    "\n",
-    "simulation = SumoSimulationSimpleObs(\n",
-    "    #sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo\",\n",
-    "    sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo-gui\",\n",
-    "    sumo_config_path=\"C:\\\\sumoconfig\\\\real_intersection.sumocfg\",\n",
-    "    signal_states=SignalStates\n",
-    ")\n",
-    "\n",
-    "env = RealIntersectionSimpleObs12(\n",
-    "    simulation=simulation,\n",
-    "    max_simulation_seconds=max_simulation_seconds\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = PPO.load(\"final_simulation\\\\_models\\\\reward_12\\\\simple\\\\ppo\\\\best_model.zip\")\n",
-    "#model = A2C.load(\"final_simulation\\\\_models\\\\reward_10\\\\a2c\\\\best_model.zip\")\n",
-    "#model = DQN.load(\"final_simulation\\\\_models\\\\reward_07\\\\dqn\\\\trained_model.zip\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "observation = env.reset()\n",
-    "\n",
-    "while True:\n",
-    "    #observation = observation[np.newaxis, ...]\n",
-    "\n",
-    "    # action = env.action_space.sample()\n",
-    "    action, _states = model.predict(observation)\n",
-    "    observation, reward, done, info = env.step(float(action))\n",
-    "\n",
-    "    # env.render()\n",
-    "    if done:\n",
-    "        print(\"info:\", info)\n",
-    "        env.render()\n",
-    "        break\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Reward 13 (Simple)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from final_simulation._env.real_intersection import RealIntersectionSimpleObs13\n",
-    "from final_simulation._sumo.simplest_intersection_simulation import SumoSimulationSimpleObs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sim time 1 minute\n",
-    "max_simulation_seconds = 180\n",
-    "\n",
-    "simulation = SumoSimulationSimpleObs(\n",
-    "    #sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo\",\n",
-    "    sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo-gui\",\n",
-    "    sumo_config_path=\"C:\\\\sumoconfig\\\\real_intersection.sumocfg\",\n",
-    "    signal_states=SignalStates\n",
-    ")\n",
-    "\n",
-    "env = RealIntersectionSimpleObs13(\n",
-    "    simulation=simulation,\n",
-    "    max_simulation_seconds=max_simulation_seconds\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#model = PPO.load(\"final_simulation\\\\_models\\\\reward_13\\\\simple\\\\ppo\\\\best_model.zip\")\n",
-    "#model = A2C.load(\"final_simulation\\\\_models\\\\reward_13\\\\simple\\\\a2c\\\\best_model.zip\")\n",
-    "model = DQN.load(\"final_simulation\\\\_models\\\\reward_13\\\\simple\\\\dqn\\\\best_model.zip\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "observation = env.reset()\n",
-    "\n",
-    "while True:\n",
-    "    #observation = observation[np.newaxis, ...]\n",
-    "\n",
-    "    # action = env.action_space.sample()\n",
-    "    action, _states = model.predict(observation)\n",
-    "    observation, reward, done, info = env.step(float(action))\n",
-    "\n",
-    "    # env.render()\n",
-    "    if done:\n",
-    "        print(\"info:\", info)\n",
-    "        env.render()\n",
-    "        break\n"
    ]
   }
  ],
