Updated q learn environment. Added q learn to model eval. Added complex environment to model eval.

--- a/final_simulation/model_evaluation.ipynb
+++ b/final_simulation/model_evaluation.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'D:\\\\Study\\\\RMIT\\\\2022\\\\COSC2793 - Computational Machine Learning\\\\Assignment02\\\\CML-Assign2'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "os.chdir('D:\\\\Study\\\\RMIT\\\\2022\\\\COSC2793 - Computational Machine Learning\\\\Assignment02\\\\CML-Assign2')\n",
@@ -24,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,25 +227,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Episode:  1\n",
-      "No simulation running.\n",
-      "saving observation file..\n",
-      "Episode:  2\n",
-      "No simulation running.\n",
-      "saving observation file..\n",
-      "Episode:  3\n",
-      "No simulation running.\n",
-      "saving observation file..\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for episode in range(1,n_episodes + 1):\n",
     "\n",
@@ -291,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q_table = \"Load q table\""
+    "q_table = np.load(\"final_simulation\\\\_models\\\\reward_13\\\\q-learn\\\\final_q_table.npy\")"
    ]
   },
   {
@@ -311,10 +284,10 @@
     "        \n",
     "        #action = model.predict(observation)\n",
     "        action = np.argmax(q_table[observation])\n",
-    "        observation, reward, done, info = env_q.step(float(action))\n",
+    "        observation, reward, done, info = env_q.step(action)\n",
     "\n",
     "        if done:\n",
-    "            env.save_metrics(\n",
+    "            env_q.save_metrics(\n",
     "                episode=episode,\n",
     "                model_name=\"QLearn\",\n",
     "                log_dir=log_dir\n",
@@ -351,6 +324,171 @@
     "                model_name=\"STATIC\",\n",
     "                log_dir=log_dir\n",
     "            )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Complex Observations & Alternate Reward\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from final_simulation._env.real_intersection import RealIntersection11\n",
+    "import final_simulation._sumo.simplest_intersection_simulation as ss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Simulation\n",
+    "simulation_complex = ss.SumoSimulation(\n",
+    "    sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo\",\n",
+    "    #sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo-gui\",\n",
+    "    sumo_config_path=\"C:\\\\sumoconfig\\\\real_intersection.sumocfg\",\n",
+    "    signal_states=SignalStates\n",
+    ")\n",
+    "\n",
+    "# Environment\n",
+    "env_complex = RealIntersection11(\n",
+    "    simulation=simulation_complex,\n",
+    "    max_simulation_seconds=max_simulation_seconds\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PPO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = PPO.load(\"final_simulation\\\\_models\\\\reward_11\\\\ppo\\\\best_model.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for episode in range(1,n_episodes + 1):\n",
+    "\n",
+    "    print(\"Episode: \", episode)\n",
+    "\n",
+    "    observation = env_complex.reset()\n",
+    "    done = False\n",
+    "\n",
+    "    while done != True:\n",
+    "        \n",
+    "        action, _states = model.predict(observation)\n",
+    "        observation, reward, done, info = env_complex.step(float(action))\n",
+    "\n",
+    "        if done:\n",
+    "            env_complex.save_metrics(\n",
+    "                episode=episode,\n",
+    "                model_name=\"PPO_COMPLEX\",\n",
+    "                log_dir=log_dir\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A2C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = A2C.load(\"final_simulation\\\\_models\\\\reward_11\\\\a2c\\\\best_model.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for episode in range(1,n_episodes + 1):\n",
+    "\n",
+    "    print(\"Episode: \", episode)\n",
+    "\n",
+    "    observation = env_complex.reset()\n",
+    "    done = False\n",
+    "\n",
+    "    while done != True:\n",
+    "        \n",
+    "        action, _states = model.predict(observation)\n",
+    "        observation, reward, done, info = env_complex.step(float(action))\n",
+    "\n",
+    "        if done:\n",
+    "            env_complex.save_metrics(\n",
+    "                episode=episode,\n",
+    "                model_name=\"A2C_COMPLEX\",\n",
+    "                log_dir=log_dir\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DQN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = DQN.load(\"final_simulation\\\\_models\\\\reward_11\\\\dqn\\\\best_model.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for episode in range(1,n_episodes + 1):\n",
+    "\n",
+    "#     print(\"Episode: \", episode)\n",
+    "\n",
+    "#     observation = env_complex.reset()\n",
+    "#     done = False\n",
+    "\n",
+    "#     while done != True:\n",
+    "        \n",
+    "#         action, _states = model.predict(observation)\n",
+    "#         observation, reward, done, info = env_complex.step(float(action))\n",
+    "\n",
+    "#         if done:\n",
+    "#             env_complex.save_metrics(\n",
+    "#                 episode=episode,\n",
+    "#                 model_name=\"DQN_COMPLEX\",\n",
+    "#                 log_dir=log_dir\n",
+    "#             )"
    ]
   }
  ],
