Models finished training

--- a/final_simulation/model_training_sarsa.ipynb
+++ b/final_simulation/model_training_sarsa.ipynb
@@ -20361,7 +20361,26 @@
       "No simulation running.\n",
       "saving observation file..\n",
       "Episode:  4\n",
-      "No simulation running.\n"
+      "No simulation running.\n",
+      "saving observation file..\n",
+      "Episode:  5\n",
+      "No simulation running.\n",
+      "saving observation file..\n",
+      "Episode:  6\n",
+      "No simulation running.\n",
+      "saving observation file..\n",
+      "Episode:  7\n",
+      "No simulation running.\n",
+      "saving observation file..\n",
+      "Episode:  8\n",
+      "No simulation running.\n",
+      "saving observation file..\n",
+      "Episode:  9\n",
+      "No simulation running.\n",
+      "saving observation file..\n",
+      "Episode:  10\n",
+      "No simulation running.\n",
+      "saving observation file..\n"
      ]
     }
    ],
