Changed notebook working directories to relative paths.

--- a/final_simulation/model_evaluation.ipynb
+++ b/final_simulation/model_evaluation.ipynb
@@ -2,18 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D:\\\\Study\\\\RMIT\\\\2022\\\\COSC2793 - Computational Machine Learning\\\\Assignment02\\\\CML-Assign2'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "from pathlib import Path\n",
     "import os\n",
-    "os.chdir('D:\\\\Study\\\\RMIT\\\\2022\\\\COSC2793 - Computational Machine Learning\\\\Assignment02\\\\CML-Assign2')\n",
+    "\n",
+    "cfd = Path(os.getcwd())\n",
+    "os.chdir(cfd.parent.absolute())\n",
     "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,9 +241,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode:  1\n",
+      "saving observation file..\n",
+      "Episode:  2\n",
+      "saving observation file..\n",
+      "Episode:  3\n",
+      "saving observation file..\n"
+     ]
+    }
+   ],
    "source": [
     "for episode in range(1,n_episodes + 1):\n",
     "\n",
@@ -336,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,9 +410,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode:  1\n",
+      "No simulation running.\n",
+      "saving observation file..\n",
+      "Episode:  2\n",
+      "No simulation running.\n",
+      "saving observation file..\n",
+      "Episode:  3\n",
+      "No simulation running.\n",
+      "saving observation file..\n"
+     ]
+    }
+   ],
    "source": [
     "for episode in range(1,n_episodes + 1):\n",
     "\n",
