--- a/final_simulation/model_training_dqn.ipynb
+++ b/final_simulation/model_training_dqn.ipynb
@@ -17,8 +17,11 @@
     }
    ],
    "source": [
+    "from pathlib import Path\n",
     "import os\n",
-    "os.chdir('D:\\\\Study\\\\RMIT\\\\2022\\\\COSC2793 - Computational Machine Learning\\\\Assignment02\\\\CML-Assign2')\n",
+    "\n",
+    "cfd = Path(os.getcwd())\n",
+    "os.chdir(cfd.parent.absolute())\n",
     "os.getcwd()"
    ]
   },
